improve custom errors, add update poll crud action
