# server/src/api/poll/poll.routes.ts
@@ -1,10 +1,11 @@
 import { Router } from 'express';
-import { createPoll, findPollBySlug } from './poll.controller';
+import { createPoll, findPollBySlug, updatePoll } from './poll.controller';
 
 const pollRouter = Router();
 
 pollRouter
   .post('/', createPoll)
-  .get('/:pollSlug', findPollBySlug);
+  .get('/:pollSlug', findPollBySlug)
+  .post('/:pollSlug', updatePoll);
 
   export default pollRouter;
